# task-manager

./: README.md
docs/: Task Manager.postman_collection.json  design_choices.txt
docs/diagrams/: architecture.drawio  database_schema.drawio  deployment_diagram.drawio  sequence (1).drawio
src/: .env-example  docker-compose.yaml
src/auth-service/: Dockerfile  pyproject.toml  requirements.txt
src/auth-service/app/: main.py
src/auth-service/app/crud/: user.py
src/auth-service/app/models/: user.py
src/auth-service/app/routers/: auth.py  user.py
src/auth-service/app/schemas/: user.py
src/auth-service/app/utils/: auth.py  database.py  logger.py  security.py
src/gateway/: pyproject.toml  requirements.txt
src/gateway/app/: main.py
src/gateway/app/utils/: logger.py  middleware.py
src/notification-service/: Dockerfile  pyproject.toml  requirements.txt
src/notification-service/app/: consumer.py  helper.txt  new_consumer.py
src/notification-service/app/utils/: email.py  new_email.py
src/task-service/: Dockerfile  helper.txt  pyproject.toml  requirements.txt
src/task-service/app/: main.py
src/task-service/app/crud/: task.py
src/task-service/app/enums/: status_enum.py
src/task-service/app/models/: task.py  user.py
src/task-service/app/routers/: tasks.py
src/task-service/app/schemas/: task.py
src/task-service/app/tests/: test_tasks.py
src/task-service/app/utils/: database.py  logger.py  message_broker.py
