[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["aarav <aarav26r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
bcrypt = "^4.2.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
black = "^24.4.2"
mypy = "^1.11.1"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
