[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = "Notification service to send notifications for messages received from other services"
authors = ["aarav <aarav26r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
aio-pika = "^9.4.2"
aiosmtplib = "^3.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
black = "^24.4.2"
mypy = "^1.11.1"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
